﻿Legend:
-------
[Foo]   -->     idea provided by Foo, coding done by Bob Fisch
[Foo]2  -->     idea provided by Foo, coding done by Kay Gürtzig
<Foo>   -->     idea AND coding done by Foo
<2>     -->     idea and coding done by Kay Gürtzig

Known issues:
- COBOL import may fail if certain single-letter identifiers are used (rename them!).
- COBOL import doesn't cope with some statement variants and variable redefinitions.
- Copying diagrams as image to the clipboard may fail with some OS/JRE combination (#685).

Current development version: 3.29-05 (2019-03-04)
- 01: Issue #657: Spanish message in German locale replaced <2>
- 01: Enh. #662/1: Info box for groups redesigned into a tree view <2>
- 01: Enh. #662/2: Group visualisation with individual colors in Arranger <2>
- 01: Enh. #662/3: Arranger popup menu item to rearrange diagrams by groups <2>
- 01: Enh. #662/4: Option to save arrangements with relative coordinates <2>
- 01: Bugfix #664: Incorrect handling of modified diagrams on closing Arranger <2>
- 01: Bugfix #664: Disambiguated canceling in AUTO_SAVE_ON_CLOSE mode <2>
- 01: Bugfix #515: Defective diagram positioning in Arranger mended <2>
- 02: Bugfix #665: Import of INSPECT statements from COBOL actually works now <2>
- 02: Bugfix #655: Arranger popup menu revised (item order, accelerator info) <2>
- 02: Bugfix #667: Removal of diagrams from Arranger could leave remnants <2>
- 02: Issue #668: Group association behaviour on outsourcing further improved <2>
- 02: Bugfix #669: C export of FOR-IN loops with traversed strings was defective <2>
- 02: Bugfix #670: Diagram/group info box of Arranger index not reliably scaled <2>
- 02: Issue #670: Live look & feel switch failed for Diagram/group info box <2>
- 03: Bugfix #672: Default group was named null.arr after cancelled save attempt <2>
- 03: Issue #673: The Arranger drawing area had to be enlarged for group bounds <2>
- 03: Issue #662/2 Group colour icon design revised (now double thin border) <2>